fixed bug: flavor text layout shift

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -8,6 +8,10 @@
 
 }
 
+.flavorTextWrapper{
+    min-height: 14rem;
+}
+
 @media all and(min-width: 30.25em) { //420px
     .collectionOptionsWrapper {
         justify-items: center;
